--- a/public/assets/scss/pages/transactions.scss
+++ b/public/assets/scss/pages/transactions.scss
@@ -55,12 +55,12 @@
     @media #{$max-lg}{
         font-size: 14px;
     }
-    @media #{$max-lg}{
-        font-weight: 600;
-    }
-    @media #{$max-md}{
-        font-weight: 500;
-    }
+    // @media #{$max-lg}{
+    //     font-weight: 600;
+    // }
+    // @media #{$max-md}{
+    //     font-weight: 500;
+    // }
 } 
 .bone_count{
     b{
