--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -127,6 +127,7 @@
     }
     @media #{$max-xl}{
         font-size: 14px;
+        height: 100%;
     }
 }
 .rt-chain {
@@ -1776,6 +1777,9 @@
     }
 }
 .dropdwn-sec {
+    .dropdown-menu{
+        width: 100%;
+    }
     @media #{$max-sm} {
         display: flex;
         flex-direction: column;
@@ -2387,6 +2391,17 @@ background: $body-bg;
             padding-right: 30px !important;
             height: 100%;
             cursor: pointer;
+            @media #{$max-xxl}{
+                font-size: 16px;
+                padding: 10px 22px !important;
+            }
+            @media #{$max-xl}{
+                font-size: 14px;
+            }
+            @media #{$max-xsm}{
+                padding: 10px !important;
+                font-size: 12px;
+            }
         }
         .flex{
             flex-direction: row-reverse;
@@ -2426,6 +2441,7 @@ background: $body-bg;
     margin: 0 auto;
     text-align: center;
     background-color: rgba(0,0,0,0.8);
+    z-index: 10;
 }
 
 .cus-shimer{
@@ -2439,3 +2455,29 @@ background: $body-bg;
         font-family: "MADE Okine Sans PERSONAL USE" !important;
     }
 } 
+.field-grid{
+    .res-align{
+        .form-field{
+            @media #{$max-sm}{
+                justify-content: unset;
+            }
+            
+        }
+    } 
+}
+.lft-spc{
+    @media #{$max-sm}{
+        margin-left: auto;
+    }
+}
+.right-spacing{
+    @media #{$max-sm}{
+        margin-right: 13px;
+    }
+}
+.button-wrap{
+    @media #{$max-md}{
+        display: flex;
+        align-items: center;
+    } 
+}
