--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -42,36 +42,36 @@ body{
     font-family: 'MADE Okine Sans PERSONAL USE' !important;
 }
 .ffms-inherit{
-    font-family: 'MADE Okine Sans PERSONAL USE' !important;
+    font-family: 'MADE Okine Sans PERSONAL USE';
     .no-record{
-        font-family: 'MADE Okine Sans PERSONAL USE' !important;
+        font-family: 'MADE Okine Sans PERSONAL USE';
     }
     p,h1,h2,h3,h5,h6,span,label{
-        font-family: 'MADE Okine Sans PERSONAL USE' !important;
+        font-family: 'MADE Okine Sans PERSONAL USE';
     }
     b,a,div,section,button{
-        font-family: 'MADE Okine Sans PERSONAL USE' !important;
+        font-family: 'MADE Okine Sans PERSONAL USE';
     }
     ul,li,ol{
-        font-family: 'MADE Okine Sans PERSONAL USE' !important;
+        font-family: 'MADE Okine Sans PERSONAL USE';
     }
     table{
         thead,tbody,th,td,tr,span{
-            font-family: 'MADE Okine Sans PERSONAL USE' !important;
+            font-family: 'MADE Okine Sans PERSONAL USE';
         }
     }
     form,input{
-        font-family: 'MADE Okine Sans PERSONAL USE' !important;
+        font-family: 'MADE Okine Sans PERSONAL USE';
     }
     ::placeholder{
-        font-family: 'MADE Okine Sans PERSONAL USE' !important;
+        font-family: 'MADE Okine Sans PERSONAL USE';
     }
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     margin-bottom: 0;
-    font-family: 'Open Sans' !important;
+    font-family: 'Open Sans';
     line-height: 1.2;
 }
 b{
@@ -164,7 +164,7 @@ p{
     color:rgba(14, 14, 14, 0.89);
     color:rgba($white, 0.89);
     margin-bottom: 8px;
-    font-family: 'Open Sans' !important;
+    font-family: 'Open Sans';
     &:last-child {
         margin-bottom: 0;
     }
