--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -46,7 +46,10 @@ body{
     .no-record{
         font-family: 'MADE Okine Sans PERSONAL USE';
     }
-    p,h1,h2,h3,h5,h6,span,label{
+    .h1,.h2,.h3,.h4,.h5,.h6{
+        font-family: 'MADE Okine Sans PERSONAL USE';
+    }
+    p,h1,h2,h3,h4,h5,h6,span,label{
         font-family: 'MADE Okine Sans PERSONAL USE';
     }
     b,a,div,section,button{
