--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -24,6 +24,7 @@ $ltdrk-orange:#f9d2bc;
 $lt-purple-50:#ecd5fd;
 $black:#000;
 $red:#ff3030;
+$black-lite:#1c2333;
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
