--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2534,3 +2534,17 @@ input:-internal-autofill-selected {
         text-overflow: ellipsis;
     }
 }
+.flx{
+    display: flex;
+    .grey-btn{
+        margin-right: 10px;
+    }
+}
+.btn-disble{
+    opacity: 0.4;
+}
+.progress-tab{
+    .error{
+        margin-top: 5px;
+    }
+}
