--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2536,10 +2536,15 @@ input:-internal-autofill-selected {
 }
 .fix-layout{
     min-height: 343px;
+    position: relative;
     table{
         table-layout: fixed;
         border-collapse: collapse;
         width: 100%;
+        @media #{$max-lg}{
+            table-layout: unset;
+            width: unset;
+        }
         tr{
             height: 62px;
         }
@@ -2566,7 +2571,6 @@ input:-internal-autofill-selected {
         }
         td{
             &:first-child{
-
                 width: 400px;
                 white-space: nowrap;
                 overflow: hidden;
@@ -2599,5 +2603,13 @@ input:-internal-autofill-selected {
                 height: auto;
             }
         }
+    }
+    .no-found {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: calc(50% + 35px);
+        left: 50%;
+        transform: translate(-50%, calc(-50%));
     }
 }
