--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -218,6 +218,13 @@
     padding: 12px 20px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
+    p{
+     &:nth-child(2){
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+     }   
+    }
 }
 .cnfrm_check_box {
     color: $body-text;
