banner section changes

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2561,6 +2561,9 @@ input:-internal-autofill-selected {
         min-height: 120px;
     }
 }
+.top_bnr_area.mn-ht {
+    min-height: 399px;
+}
 .flx{
     display: flex;
     .grey-btn{
