--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -648,8 +648,12 @@ label{
     font-size: 16px;
 }
 
-body.modal-open {
-    padding-left: 0 !important;   
+body {
+    // padding-left: 0 !important;   
+    // padding-right: 0 !important;
+}
+.modal{
+    padding-right: 0 !important;
 }
 .whitespace-nowrap {
     white-space: pre-wrap;
