--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2720,3 +2720,9 @@ input:-internal-autofill-selected {
         transform: translate(-50%,-50%);
     }
 }
+.precent-td {
+    display: block;
+    width: 70%;
+    text-align: center;
+    padding-right: 0;
+}
