--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -279,12 +279,21 @@
 }
 .header-overide{
     .dot-icon {
-        
         @media #{$max-lg}{
             max-width: 20px;
         }
     }
     .navbar-nav .dropdown-menu{
+        span{
+            @media #{$max-xxsm}{
+                font-size: 12px;
+            } 
+        }
+        .dropdown-item{
+            @media #{$max-xxsm}{
+                margin: 5px 0;
+            } 
+        }
         @media #{$max-md}{
             left: 0;
             right: auto;
@@ -299,6 +308,7 @@
         @media #{$max-xxsm}{
             left: 0;
             width: 100%;
+            padding: 7px;
         }
     }
     
