Dropdown made for N/W switch

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2836,3 +2836,6 @@ input:-internal-autofill-selected {
         top: 17px;
     }
 }
+.innerDivBgBlack > div {
+    background-color: black !important;
+}
