--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2928,5 +2928,7 @@ input:-internal-autofill-selected {
             }
         }
     }
-     
+    @media #{$max-md}{
+        display: none;
+    } 
 }
