--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -49,7 +49,7 @@
 
 .inner-header{
     .nav-item {
-        margin-right: 12px;
+        margin-right: 20px;
         &:last-child{
             margin-right: 0;
             @media #{$max-md}{
@@ -146,9 +146,13 @@
     }
     .dot-icon{
         max-width: 30px;
+        // margin-right: 20px;
         @media #{$max-lg}{
             max-width: 20px;
         }
+    }
+    .shib-dropdown {
+        margin-right: 20px;
     }
     .px-4 {
         @media #{$max-sm}{
@@ -235,21 +239,32 @@
         
         .dropdown-item {
             border-bottom:1px solid rgba($color: $white, $alpha: 0.2);
-            padding: 12px 0px;
-            margin: 10px 0;
+            padding: 15px 20px !important;
+            margin: 0px 0;
             @media #{$max-md}{
                 white-space: normal;
             }
            
         }
+        .dropdown-item:hover {
+            background: #000;
+        }
         .dropdown-item:last-child{
             margin-bottom: 0;
-            padding-bottom: 0;
+            // padding-bottom: 0;
             border:0
+        }
+        .dropdown-item:first-child:hover{
+            border-bottom-left-radius: 0.375rem;
+            border-bottom-right-radius: 0.375rem;
         }
         .dropdown-item:first-child{
             margin-top: 0;
             padding-top: 0;
+        }
+        .dropdown-item:first-child:hover{
+            border-top-left-radius: 0.375rem;
+            border-top-right-radius: 0.375rem;
         }
         .h6 {
             font-size: 16px;
@@ -266,7 +281,7 @@
                 content: "";
                 position: absolute;
                 left: 0;
-                top: 0;
+                top:4px;
                 bottom: 0;
                 height: 65%;
                 width: 3px;
@@ -276,6 +291,7 @@
             }
         }
     }
+    
 }
 .header-overide{
     .btn-status{
