--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -60,6 +60,9 @@
             margin-bottom: 0px;
             margin-right: 0;
         }
+        @media #{$max-xxsm}{
+            margin-right: 10px;
+        }
 
     }
     .bg-dark-1000{
@@ -91,7 +94,7 @@
                 top: 50%;
                 -webkit-transform: translateY(-50%);
                 transform: translateY(-50%) rotate(45deg);
-                right: 10px;
+                right: 18px;
                 width: 10px;
                 height: 10px;
                 border: 2px solid;
@@ -127,15 +130,15 @@
             font-weight: 500;
             font-size: 18px;
             padding: 13px 22px !important;
-            padding-right: 30px !important;
+            padding-right: 45px !important;
             height: 100%;
             cursor: pointer;
-            @media #{$max-xxl}{
+            @media #{$max-xl}{
                 padding: 12px 20px !important;
-                padding-right: 30px !important;
+                padding-right: 45px !important;
                 font-size: 16px;
             }
-            @media #{$max-xl}{
+            @media #{$max-lg}{
                 font-size: 14px;
             }
             @media #{$max-xsm}{
@@ -151,9 +154,9 @@
             max-width: 20px;
         }
     }
-    .shib-dropdown {
-        margin-right: 20px;
-    }
+    // .shib-dropdown {
+    //     margin-right: 20px;
+    // }
     .px-4 {
         @media #{$max-sm}{
             padding-right: 0.5rem !important;
