--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2940,3 +2940,20 @@ input:-internal-autofill-selected {
         display: none;
     } 
 }
+.leading-5 {
+    font-size: 19px !important;
+}
+.grid-flow-row-dense button span {
+    width: 50px !important;
+}
+.grid-flow-row-dense button span img {
+    width: 100% !important;
+}
+.rounded  span {
+    width: 50px !important;
+}
+.rounded  span img {
+    width: 100% !important;
+}
+
+
