--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -349,3 +349,43 @@
         }
     }
 }
+
+ 
+.cus_dropdown {
+    .nav-item.dropdown{
+        position: relative;
+        &:after{
+            content: "";
+            position: absolute;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%) rotate(45deg);
+            right: 18px;
+            width: 10px;
+            height: 10px;
+            border: 2px solid;
+            border-top: 0;
+            border-left: 0;
+            margin-top: -3px;
+        }
+    }
+    
+    a:after{
+        display: none;
+    }
+    .dropdown-menu{
+        padding: 0;
+        margin: 0;
+        a{
+            padding: 20px !important;         
+        &:hover {
+            background: #000 !important;
+            border-radius: 0.375rem;
+        }
+    }
+    }
+
+}
+.me-3  .dropdown-menu{
+    padding: 15px;
+}
