--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1136,6 +1136,7 @@
     }
     .modal-content{
         height:550px;
+        // height: 590px;
         @media #{$max-sm}{
             height:490px;
         }
@@ -2881,6 +2882,18 @@ input:-internal-autofill-selected {
     color: $white;
     position: relative;
     width: 240px;
+    &.hd-sel-over{
+        width: 100%;
+        padding-right: 40px;
+        .nav-link {
+            padding-left: 0;
+            padding-right: 0;
+        }
+        .dropdown-menu {
+            width: 100%;
+            min-width: 210px;
+        }
+    }
     .nav-link{
         &:focus{
             color:$white;
@@ -2950,20 +2963,22 @@ input:-internal-autofill-selected {
         display: block;
     }
 }
-// .leading-5 {
-//     font-size: 19px !important;
-// }
-// .grid-flow-row-dense button span {
+.wallet-network .leading-5 {
+    font-size: 18px !important;
+}
+// .wallet-network .grid-flow-row-dense button span {
 //     width: 50px !important;
 // }
-// .grid-flow-row-dense button span img {
+// .wallet-network .grid-flow-row-dense button span img {
 //     width: 100% !important;
 // }
-// .rounded  span {
+// .wallet-network .rounded  span {
 //     width: 50px !important;
-// }
-// .rounded  span img {
+// // }
+// .wallet-network .rounded  span img {
 //     width: 100% !important;
 // }
 
-
+.wid-overide{
+    max-width: 38rem !important;
+}
