--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3022,3 +3022,20 @@ input:-internal-autofill-selected {
         }
     }
 }  
+
+
+.walletconnect-modal__base {
+    background:$body-bg-800 !important;
+    .walletconnect-modal__mobile__toggle {
+        background:$body-bg !important;
+    }
+    .walletconnect-modal__mobile__toggle_selector {
+        background: $body-bg-800 !important;
+    }
+    .walletconnect-qrcode__text {
+        color: rgba($white,0.89) !important;
+    }
+    .walletconnect-connect__button__text {
+        color: rgba($white,0.89) !important;
+    }
+}
