--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -244,6 +244,9 @@
             @media #{$max-xsm}{
                 padding-left: 0;
             }
+            &::after{
+                content: none;
+            }
         }
     }
     .nav-link.active {
