--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -803,3 +803,10 @@ body {
     background:$body-bg;
     border: 1px solid rgba($white,0.89);
 }
+
+
+
+.login-btn[data-v-5acd22a6] {
+    background:$body-bg;
+    border: 1px solid rgba($white,0.89);
+}
