--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -805,7 +805,10 @@ body {
 }
 
 
-
+// pr test
+.login-dialog-container.v-card .footer-links[data-v-6030e440] {
+    background:$body-bg-800 !important;
+}
 .login-btn[data-v-5acd22a6] {
     background:$body-bg;
     border: 1px solid rgba($white,0.89);
